left box estilizada

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
   <link rel="stylesheet" href="reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
   
@@ -34,7 +37,7 @@
                 <input type="email" name="email" id="email" placeholder="Email Adress" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
                 <button type="submit">Claim your free trial</button>
-                <span>By clicking the button, you are agreeing to our Terms and Services</span>
+                <span class="letrasVermelhas">By clicking the button, you are agreeing to our</span><span class="letrasAzuis">Terms and Services</span>
               </div>
             </div>
           </div>
