--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <div class="box__right">
           <div class="form__wraper">
             <div class="form__header">
-              <h2>Try it free 7 days then $20/mo. thereafter</h2>
+              <h2><span class="weight__700">Try it free 7 days</span> then $20/mo. thereafter</h2>
               <div class="form">
                 <input type="text" name="firstname" id="firstname" placeholder="First Name" required>
                 <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
                 <input type="email" name="email" id="email" placeholder="Email Adress" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
-                <button type="submit">Claim your free trial</button>
-                <span class="letrasVermelhas">By clicking the button, you are agreeing to our</span><span class="letrasAzuis">Terms and Services</span>
+                <button type="submit">CLAIM YOUR FREE TRIAL</button>
+                <h3>By clicking the button, you are agreeing to our<span class="letraVermelha">Terms and Services</span></h3>
               </div>
             </div>
           </div>
