--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
                 <input type="email" name="email" id="email" placeholder="Email Adress" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
-                <button type="submit">CLAIM YOUR FREE TRIAL</button>
+                <button type="submit" id="btn__claim">CLAIM YOUR FREE TRIAL</button>
                 <h3>By clicking the button, you are agreeing to our<span class="letraVermelha">Terms and Services</span></h3>
               </div>
             </div>
