--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <main class="container">
       <div class="container__box">
+        
         <div class="box__left">
           <h1>Learn to code by watching others</h1>
           <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
@@ -30,14 +31,22 @@
         <div class="box__right">
           <div class="form__header">
             <h2><span class="weight__700">Try it free 7 days</span> then $20/mo. thereafter</h2>
-            <div class="form">
-              <input type="text" name="firstname" id="firstname" placeholder="First Name" required>
-              <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
-              <input type="email" name="email" id="email" placeholder="Email Adress" required>
-              <input type="text" name="password" id="password" placeholder="Password" required>
-              <button type="submit" id="btn__claim">CLAIM YOUR FREE TRIAL</button>
+            <form action='' class="form" name="sign_up_form" method="post" autocomplete="off">
+              <input type="text" name="firstname" value="" placeholder="First Name">
+              <span class="error firstname__error"></span>
+
+              <input type="text" name="lastname" value="" placeholder="Last Name">
+              <span class="error lastname__error"></span>
+
+              <input type="email" name="email" value="" placeholder="Email">
+              <span class="error email__error"></span>
+
+              <input type="text" name="password" value="" placeholder="Passowrd">
+              <span class="error password__error"></span>
+
+              <input class="submit__button" type="submit" name="submit_btn" value="CLAIM YOUR FREE TRIAL">
               <h3>By clicking the button, you are agreeing to our<span class="letraVermelha"> Terms and Services</span></h3>
-            </div>
+            </form>
           </div>
         </div>
       </div>  
@@ -48,5 +57,7 @@
         Coded by <a href="#">Your Name Here</a>.
       </p>
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
