icone de erro inserido no input

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
           <div class="form__header">
             <h2><span class="weight__700">Try it free 7 days</span> then $20/mo. thereafter</h2>
             <form action='' class="form" name="sign_up_form" method="post" autocomplete="off">
-              <input type="text" name="firstname" value="" placeholder="First Name">
+              <div class="input__box">
+                <input type="text" name="firstname" value="" placeholder="First Name">
+                <span class="icon firstname__icon">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+                </span>
+              </div>
               <span class="error firstname__error"></span>
 
               <input type="text" name="lastname" value="" placeholder="Last Name">
