icone adicionado em todos os input

--- a/index.html
+++ b/index.html
@@ -40,15 +40,29 @@
               </div>
               <span class="error firstname__error"></span>
 
-              <input type="text" name="lastname" value="" placeholder="Last Name">
+              <div class="input__box">
+                <input type="text" name="lastname" value="" placeholder="Last Name">
+                <span class="icon lastname__icon">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+                </span>
+              </div>
               <span class="error lastname__error"></span>
 
-              <input type="email" name="email" value="" placeholder="Email">
+              <div class="input__box">
+                <input type="email" name="email" value="" placeholder="Email">
+                <span class="icon email__icon">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+                </span>
+              </div>
               <span class="error email__error"></span>
 
-              <input type="text" name="password" value="" placeholder="Passowrd">
+              <div class="input__box">
+                <input type="text" name="password" value="" placeholder="Passowrd">
+                <span class="icon password__icon">
+                  <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+                </span>
+              </div>
               <span class="error password__error"></span>
-
               <input class="submit__button" type="submit" name="submit_btn" value="CLAIM YOUR FREE TRIAL">
               <h3>By clicking the button, you are agreeing to our<span class="letraVermelha"> Terms and Services</span></h3>
             </form>
