regras nos nomes adicionada

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2><span class="weight__700">Try it free 7 days</span> then $20/mo. thereafter</h2>
             <form action='' class="form" name="sign_up_form" method="post" autocomplete="off">
               <div class="input__box">
-                <input type="text" name="firstname" value="" placeholder="First Name">
+                <input class="inputarea firstname__input" type="text" name="firstname" value="" placeholder="First Name">
                 <span class="icon firstname__icon">
                   <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
                 </span>
@@ -41,7 +41,7 @@
               <span class="error firstname__error"></span>
 
               <div class="input__box">
-                <input type="text" name="lastname" value="" placeholder="Last Name">
+                <input class="inputarea lastname__input" type="text" name="lastname" value=""  placeholder="Last Name">
                 <span class="icon lastname__icon">
                   <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
                 </span>
@@ -49,7 +49,7 @@
               <span class="error lastname__error"></span>
 
               <div class="input__box">
-                <input type="email" name="email" value="" placeholder="Email">
+                <input class="inputarea email__input" type="email" name="email" value=""  placeholder="Email">
                 <span class="icon email__icon">
                   <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
                 </span>
@@ -57,7 +57,7 @@
               <span class="error email__error"></span>
 
               <div class="input__box">
-                <input type="text" name="password" value="" placeholder="Passowrd">
+                <input class="inputarea password__input" type="text" name="password" value="" placeholder="Passowrd">
                 <span class="icon password__icon">
                   <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
                 </span>
