botao com hover e click

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <div class="form__header">
             <h2><span class="weight__700">Try it free 7 days</span> then $20/mo. thereafter</h2>
             <form action='' class="form" name="sign_up_form" method="post" autocomplete="off">
+              <!-- First Name input --------------------------------------------- -->
               <div class="input__box">
                 <input class="inputarea firstname__input" type="text" name="firstname" value="" placeholder="First Name">
                 <span class="icon firstname__icon">
@@ -39,7 +40,7 @@
                 </span>
               </div>
               <span class="error firstname__error"></span>
-
+              <!-- Last Name input ---------------------------------------------- -->
               <div class="input__box">
                 <input class="inputarea lastname__input" type="text" name="lastname" value=""  placeholder="Last Name">
                 <span class="icon lastname__icon">
@@ -47,7 +48,7 @@
                 </span>
               </div>
               <span class="error lastname__error"></span>
-
+              <!-- Email input -------------------------------------------------- -->
               <div class="input__box">
                 <input class="inputarea email__input" type="email" name="email" value=""  placeholder="Email">
                 <span class="icon email__icon">
@@ -55,7 +56,7 @@
                 </span>
               </div>
               <span class="error email__error"></span>
-
+              <!-- Passowrd input ---------------------------------------------- -->
               <div class="input__box">
                 <input class="inputarea password__input" type="text" name="password" value="" placeholder="Passowrd">
                 <span class="icon password__icon">
@@ -63,6 +64,7 @@
                 </span>
               </div>
               <span class="error password__error"></span>
+              <!-- Submit button ---------------------------------------------- -->
               <input class="submit__button" type="submit" name="submit_btn" value="CLAIM YOUR FREE TRIAL">
               <h3>By clicking the button, you are agreeing to our<span class="letraVermelha"> Terms and Services</span></h3>
             </form>
